@@ -89,12 +89,24 @@
     "returned XA_RB* (%d) for xid '%s', but the Transaction Manager called " \
     "xa_commit() without TMONEPHASE flag: there probably is a bug inside " \
     "the RM code"
-#define LIXA_SYSLOG_LXC018I "LXC018I resource manager '%s' returned " \
-    "XAER_NOTA during recovery rollback: the resource manager already " \
+#define LIXA_SYSLOG_LXC018I "LXC018I Resource Manager '%s' returned " \
+    "XAER_NOTA during recovery rollback: the Resource Manager already " \
     "rolled back the transaction with xid '%s'"
-#define LIXA_SYSLOG_LXC019W "LXC019W resource manager '%s' (rmid=%d) " \
+#define LIXA_SYSLOG_LXC019W "LXC019W Resource Manager '%s' (rmid=%d) " \
     "returned an unexpected return code (%d) to xa_close() call; this might " \
-    "be the symptom of a bug inside the resource manager code"
+    "be the symptom of a bug inside the Resource Manager code"
+#define LIXA_SYSLOG_LXC020W "LXC020W Resource Manager '%s' (rmid=%d) " \
+    "returned XAER_ASYNC for xid '%s', but the Transaction Manager called " \
+    "xa_forget() without TMASYNC flag: there probably is a bug inside " \
+    "the RM code"
+#define LIXA_SYSLOG_LXC021N "LXC021N Resource Manager '%s' (rmid=%d) " \
+    "returned XAER_RMERR to xa_forget() for xid '%s', it has not forgotten " \
+    "the transaction " \
+    "branch; this condition will not be notified to the Application Program"
+#define LIXA_SYSLOG_LXC022N "LXC022N Resource Manager '%s' (rmid=%d) " \
+    "returned XAER_NOTA to xa_forget() for xid '%s', it has not recognized " \
+    "the transaction as heuristically completed; this condition will not be " \
+    "notified to the Application Program"
 
 
 
@@ -142,8 +154,8 @@
 #define LIXA_SYSLOG_LXR001E "LXR001E failed to parse options: %s"
 #define LIXA_SYSLOG_LXR002I "LXR002I this LIXA recovery process is terminating"
 #define LIXA_SYSLOG_LXR003E "LXR003E unable to perform tx_open() (rc=%d)"
-#define LIXA_SYSLOG_LXR004W "LXR004W resource manager returned %d while performing cold commit recovery, xa_forget will be issued to clean-up transaction '%s'"
-#define LIXA_SYSLOG_LXR005W "LXR005W resource manager returned %d while performing cold rollback recovery, xa_forget will be issued to clean-up transaction '%s'"
+#define LIXA_SYSLOG_LXR004W "LXR004W Resource Manager returned %d while performing cold commit recovery, xa_forget will be issued to clean-up transaction '%s'"
+#define LIXA_SYSLOG_LXR005W "LXR005W Resource Manager returned %d while performing cold rollback recovery, xa_forget will be issued to clean-up transaction '%s'"
 
 
 
