@@ -32,7 +32,7 @@ xa_forget/0
 AT_CHECK([export LIXA_PROFILE=CASE_PROF_0002 ; lixa_test_exec.sh reset recycle lixar -b -p -x 11111111-2222-3333-4444-555555555555.66666666-7777-8888-9999-000000000000 -c], [0], [ignore], [ignore])
 AT_CLEANUP
 
-AT_SETUP([Cold rollback heurstically completed TX])
+AT_SETUP([Cold rollback heuristically completed TX])
 AT_DATA([monkey1s.conf],
 [[# first monkey R.M. config
 xa_open/0
@@ -103,7 +103,7 @@ xa_commit/8
 xa_forget/0
 xa_close/0
 ]])
-AT_CHECK([export LIXA_PROFILE=CASE_PROF_0002 ; lixa_test_exec.sh reset start case0002 commit -3], [0], [ignore], [ignore])
+AT_CHECK([export LIXA_PROFILE=CASE_PROF_0002 ; lixa_test_exec.sh reset start case0002 commit -7], [0], [ignore], [ignore])
 AT_DATA([monkey1s.conf],
 [[# first monkey R.M. config
 xa_open/0
