@@ -1,8 +1,8 @@
 # XA Specification compliance case tests
 
-m4_include([xa_5_37.at])
+m4_include([xa_5_40.at])
 
 m4_include([xa_5_26.at])
 m4_include([xa_5_30.at])
 m4_include([xa_5_32.at])
-
+m4_include([xa_5_37.at])
